--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/cameraroll": "^4.0.4",
+    "fbjs": "^3.0.0",
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-camera": "^4.1.1",
